// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the EARLY ACCESS SOFTWARE LICENSE AGREEMENT
// available at http://github.com/namespacelabs/foundation

syntax = "proto3";

package foundation.languages.web;

option go_package = "namespacelabs.dev/foundation/internal/languages/web";

message Backend {
    string endpoint_owner = 1;
    string service_name   = 2;
}