// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the EARLY ACCESS SOFTWARE LICENSE AGREEMENT
// available at http://github.com/namespacelabs/foundation

syntax = "proto3";

package foundation.universe.storage.s3;

option go_package = "namespacelabs.dev/foundation/universe/storage/s3";

import "std/proto/options.proto";

message BucketArgs {
    string bucket_name = 1;
    // Optional. If not specified, and the cluster is deployed in a single
    // AWS region, create the bucket in the same region as the cluster.
    string region = 2 [(foundation.std.proto.provision_only) = true];
}

message MultipleBucketArgs {
    repeated BucketArgs bucket = 1;
}
